--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+
+    //Dagger2
+    implementation "com.google.dagger:dagger:2.22"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.22"
+
+
     //Retrofit2
     implementation "com.squareup.retrofit2:retrofit:2.3.0"
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
@@ -40,4 +46,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+
+    //Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
