--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -34,7 +36,8 @@ dependencies {
     //Dagger2
     implementation "com.google.dagger:dagger:2.22"
     annotationProcessor "com.google.dagger:dagger-compiler:2.22"
-
+    kapt 'com.google.dagger:dagger-android-processor:2.22'
+    kapt 'com.google.dagger:dagger-compiler:2.22'
 
     //Retrofit2
     implementation "com.squareup.retrofit2:retrofit:2.3.0"
