--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,20 +5,21 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name="githubrepos.GitHubRepoApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name="GitHubOrganizationRepos.presentation.MainActivity">
+        <activity android:name="githubrepos.presentation.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="GitHubOrganizationRepos.presentation.WebViewActivity"/>
+        <activity android:name="githubrepos.presentation.WebViewActivity"/>
     </application>
 
 </manifest>
