- put logic in viewmodel into separate methods. - use List from Kotlin instead of ArrayList.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,9 @@ dependencies {
 
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    //Unit Test
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test:core:1.0.0'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 }
