--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,14 +47,17 @@ dependencies {
     //RxJava2
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.2.0-alpha04'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
 
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     //Unit Test
     testImplementation 'junit:junit:4.12'
-    testImplementation 'androidx.test:core:1.0.0'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'androidx.test:core:1.1.0'
+    testImplementation 'org.mockito:mockito-core:2.27.0'
+    testImplementation 'org.mockito:mockito-inline:2.8.47'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC3'
 }
